--- a/app/views/piece/show.html.erb
+++ b/app/views/piece/show.html.erb
@@ -1,2 +1,72 @@
-<%= @piece.title %><br>
-<%= @piece.contents.html_safe %>
+<div id="pan-navi" class="clearfix">
+	<ol>
+		<li class="arrow"><a href="./index.html">HOME</a></li>
+		<li class="arrow"><a href="./sitekabu-list.html">仕手株速報</a></li>
+		<li><strong>ガンホーオンラインエンターテイメントが仕手筋に狙われる</strong></li>
+	</ol>
+</div>
+<div id="content" class="clearfix">
+	<div id="content-box" class="clearfix">
+
+
+
+<article id="main" class="clearfix">
+	<div class="title-bar">
+		<h1><%= @piece.title %></h1>
+	</div>
+
+	<div class="sitekabu-state clearfix">
+		<p>2013/06/18(火)　18:08</p>
+		<ul class="soucial-botton clearfix">
+			<li>
+				<iframe src="http://www.facebook.com/widgets/like.php?href=http://deai-apps.jp/archive/waplog.html&layout=button_count" scrolling="no" frameborder="0" style="border:none; width:100px; height:20px" title="facebook いいね"></iframe>
+			</li>
+			<li class="tweet">
+				<a href="http://twitter.com/share" class="twitter-share-button" data-url="URL" data-text="株価予想NAVI" data-count="horizontal" data-via="deaiapps" data-lang="ja">ツイート</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+			</li>
+			<li class="hatena">
+				<a href="http://b.hatena.ne.jp/entry/http://deai-apps.jp/archive/%e3%83%89%e3%82%ad%e3%83%89%e3%82%ad%e3%83%89%e3%83%a9%e3%82%a4%e3%83%96.html" class="hatena-bookmark-button" data-hatena-bookmark-title=" &raquo; ドキドキドライブ！ドライブ相手を探せる" data-hatena-bookmark-layout="standard"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+			</li>
+			<li class="puls1">
+				<g:plusone size="medium"></g:plusone>
+			</li>
+		</ul>
+
+	</div>
+
+	<div class="sitekabu-article">
+		<p>
+			<%= @piece.contents.html_safe %>
+		</p>
+	</div>
+
+	<div class="sitekabu-pn-article">
+		<ul>
+			<li><a href="./sitekabu.html">&lt;&lt;ガンホーオンラインエンターテイメントが仕手筋に狙われる</a></li>
+			<li><a href="./sitekabu.html">ガンホーオンラインエンターテイメントが仕手筋に狙われる&gt;&gt;</a></li>
+		</ul>
+	</div>
+
+	<section class="sitekabu-related-article">
+		<h2>新着！仕手株速報</h2>
+
+		<dl class="clearfix">
+			<dt>2013/06/18</dt>
+			<dd><a href="./sitekabu.html">ガンホーオンラインエンターテイメントが仕手筋に狙われる</a></dd>
+			<dt>2013/06/18</dt>
+			<dd><a href="./sitekabu.html">ガンホーオンラインエンターテイメントが仕手筋に狙われる</a></dd>
+			<dt>2013/06/18</dt>
+			<dd><a href="./sitekabu.html">ガンホーオンラインエンターテイメントが仕手筋に狙われる</a></dd>
+			<dt>2013/06/18</dt>
+			<dd><a href="./sitekabu.html">ガンホーオンラインエンターテイメントが仕手筋に狙われる</a></dd>
+			<dt>2013/06/18</dt>
+			<dd><a href="./sitekabu.html">ガンホーオンラインエンターテイメントが仕手筋に狙われる</a></dd>
+		</dl>
+
+		<p>
+			<%= link_to "仕手株速報一覧へ", piece_index_path %>
+		</p>
+
+	</section>
+
+</article>
