--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,7 +1,7 @@
 <nav id="g-navi">
 	<ul class="clearfix">
 		<li class="g-navi-1"><a href="./index.html">注目銘柄</a></li>
-		<li class="g-navi-2"><%= link_to "仕手株速報", page_rise_path %></li>
+		<li class="g-navi-2"><%= link_to "仕手株速報", piece_index_path %></li>
 		<li class="g-navi-3"><%= link_to "株価予測", boards_path %></li>
 		<li class="g-navi-4"><%= link_to "投資顧問会社口コミ", {controller: :boards, action: :index_consul, id: 1} %></li>
 		<li class="g-navi-5"><a href="./blog-rank-kabu.html">株ブログランキング</a></li>
@@ -9,6 +9,6 @@
 		<li class="g-navi-7"><a href="./beginner-list.html">株初心者</a></li>
 		<li class="g-navi-8"><a href="./glossary-list.html">株用語集</a></li>
 		<li class="g-navi-9"><a href="./brand-list.html">銘柄一覧</a></li>
-		<li class="g-navi-10"><%= link_to "投資顧問一覧", page_consultant_path %></li>
+		<%- if false %><li class="g-navi-10"><%= link_to "投資顧問一覧", page_consultant_path %></li><% end %>
 	</ul>
 </nav>
