--- a/app/views/glossaries/index.html.erb
+++ b/app/views/glossaries/index.html.erb
@@ -1,25 +1,212 @@
-<h1>Listing glossaries</h1>
+<div id="pan-navi" class="clearfix">
+<ol>
+<li class="arrow"><a href="./index.html">HOME</a></li>
+<li><strong>株用語集</strong></li>
+</ol>
+</div>
+<!--//pan-navi-->
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Contents</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<!--content-->
+<div id="content" class="clearfix">
 
-<% @glossaries.each do |glossary| %>
-  <tr>
-    <td><%= glossary.title %></td>
-    <td><%= glossary.contents %></td>
-    <td><%= link_to 'Show', glossary %></td>
-    <td><%= link_to 'Edit', edit_glossary_path(glossary) %></td>
-    <td><%= link_to 'Destroy', glossary, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+<!--content-box-->
+<div id="content-box" class="clearfix">
 
-<br />
+<!--main-->
+<article id="main" class="clearfix">
 
-<%= link_to 'New Glossary', new_glossary_path %>
+<div class="title-bar">
+<h1><img src="./img/title-bar-glossary-list.png" alt="株用語集" /></h1>
+</div>
+
+<ul class="glossary-nav clearfix">
+<li><a href="#glossary-1">あ行</a></li>
+<li><a href="#glossary-2">か行</a></li>
+<li><a href="#glossary-3">さ行</a></li>
+<li><a href="#glossary-4">た行</a></li>
+<li><a href="#glossary-5">な行</a></li>
+<li><a href="#glossary-6">は行</a></li>
+<li><a href="#glossary-7">ま行</a></li>
+<li><a href="#glossary-8">や行</a></li>
+<li><a href="#glossary-9">ら行</a></li>
+<li><a href="#glossary-10">わ行</a></li>
+<li><a href="#glossary-11">英数</a></li>
+</ul>
+
+<section  id="glossary-1" class="glossary-list clearfix">
+<h2>あ行の株用語</h2>
+<ul>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+</ul>
+</section>
+
+<section  id="glossary-2" class="glossary-list clearfix">
+<h2>か行の株用語</h2>
+<ul>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+</ul>
+</section>
+
+<section  id="glossary-3" class="glossary-list clearfix">
+<h2>さ行の株用語</h2>
+<ul>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+</ul>
+</section>
+
+<section  id="glossary-4" class="glossary-list clearfix">
+<h2>た行の株用語</h2>
+<ul>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+</ul>
+</section>
+
+<section  id="glossary-5" class="glossary-list clearfix">
+<h2>な行の株用語</h2>
+<ul>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+</ul>
+</section>
+
+<section  id="glossary-6" class="glossary-list clearfix">
+<h2>は行の株用語</h2>
+<ul>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+</ul>
+</section>
+
+<section  id="glossary-7" class="glossary-list clearfix">
+<h2>ま行の株用語</h2>
+<ul>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+</ul>
+</section>
+
+<section  id="glossary-8" class="glossary-list clearfix">
+<h2>や行の株用語</h2>
+<ul>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+</ul>
+</section>
+
+<section  id="glossary-9" class="glossary-list clearfix">
+<h2>ら行の株用語</h2>
+<ul>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+</ul>
+</section>
+
+<section  id="glossary-10" class="glossary-list clearfix">
+<h2>わ行の株用語</h2>
+<ul>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+</ul>
+</section>
+
+<section  id="glossary-11" class="glossary-list clearfix">
+<h2>英数の株用語</h2>
+<ul>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+<li><a href="./glossary.html">アービトラージ</a></li>
+</ul>
+</section>
+
+</article>
