--- a/app/views/glossaries/show.html.erb
+++ b/app/views/glossaries/show.html.erb
@@ -1,15 +1,55 @@
-<p id="notice"><%= notice %></p>
+<div id="pan-navi" class="clearfix">
+<ol>
+<li class="arrow"><a href="./index.html">HOME</a></li>
+<li class="arrow"><a href="./glossary-list.html">株用語集</a></li>
+<li><strong>アービトラージ</strong></li>
+</ol>
+</div>
+<!--//pan-navi-->
 
+<!--content-->
+<div id="content" class="clearfix">
+
+<!--content-box-->
+<div id="content-box" class="clearfix">
+
+<!--main-->
+<article id="main" class="clearfix">
+
+<div class="title-bar">
+<h1>アービトラージ</h1>
+</div>
+
+<div class="glossary-state clearfix">
+<ul class="soucial-botton clearfix">
+<li>
+<iframe src="http://www.facebook.com/widgets/like.php?href=http://deai-apps.jp/archive/waplog.html&layout=button_count" scrolling="no" frameborder="0" style="border:none; width:100px; height:20px" title="facebook いいね"></iframe>
+</li>
+<li class="tweet">
+<a href="http://twitter.com/share" class="twitter-share-button" data-url="URL" data-text="株価予想NAVI" data-count="horizontal" data-via="deaiapps" data-lang="ja">ツイート</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+</li>
+<li class="hatena">
+<a href="http://b.hatena.ne.jp/entry/http://deai-apps.jp/archive/%e3%83%89%e3%82%ad%e3%83%89%e3%82%ad%e3%83%89%e3%83%a9%e3%82%a4%e3%83%96.html" class="hatena-bookmark-button" data-hatena-bookmark-title=" &raquo; ドキドキドライブ！ドライブ相手を探せる" data-hatena-bookmark-layout="standard"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+</li>
+<li class="puls1">
+<g:plusone size="medium"></g:plusone>
+</li>
+</ul>
+
+</div>
+
+<div class="glossary-article">
 <p>
-  <b>Title:</b>
-  <%= @glossary.title %>
+アービトラージとは、ああああああああああああああああああああああああああああああああああああああああああああああああああああ。<br>
+あああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ。
 </p>
+</div>
 
-<p>
-  <b>Contents:</b>
-  <%= @glossary.contents %>
-</p>
+<div class="glossary-pn-article">
+<ul>
+<li><a href="./glossary.html">&lt;&lt;IR(インベスター・リレーションズ）</a></li>
+<li><a href="./glossary.html">ＩＰＯ〈Initial Public Offering〉&gt;&gt;</a></li>
+</ul>
+</div>
 
-
-<%= link_to 'Edit', edit_glossary_path(@glossary) %> |
-<%= link_to 'Back', glossaries_path %>
+</article>
