--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,3 +1,261 @@
+<div id="pan-navi" class="clearfix">
+<ol>
+<li class="arrow"><a href="./index.html">HOME</a></li>
+<li><strong>株価予想</strong></li>
+</ol>
+</div>
+<!--//pan-navi-->
+
+<!--content-->
+<div id="content" class="clearfix">
+
+<!--content-box-->
+<div id="content-box" class="clearfix">
+
+<!--main-->
+<article id="main" class="clearfix">
+
+<section class="stock-list-wapper">
+
+<div class="title-bar">
+<h1><%= image_tag "title-bar-stock.png", alt: "株価予想" %></h1>
+</div>
+
+<ul class="stock-list-box">
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+<li class="stock-list-content clearfix">
+<dl class="clearfix">
+<dt><a href="./brand.html">【3765】ガンホー・オンライン・エンタテイメント</a>の株価予想</dt>
+<dd>名無しさん</dd>
+<dd>2013/06/18(金) 18:08</dd>
+</dl>
+<p>ガンホーは、今月末に1:10の株式分割を行う予定ですね。米では、パズドラが人気ということも嬉しいニュースですね。</p>
+<ul>
+<li class="good"><a href="./stock.html">13</a></li>
+<li class="bad"><a href="./stock.html">9</a></li>
+<li class="reply"><a href="#stock-write"><span>このレスに返信</span></a></li>
+</ul>
+</li>
+</ul>
+
+<ul class="pn-navi clearfix">
+<li><a href="./stock.html">&lt;&lt;前へ</a></li>
+<li class="current"><span>1</span></li>
+<li class="number"><a href="./stock.html">2</a></li>
+<li class="number"><a href="./stock.html">3</a></li>
+<li class="number"><a href="./stock.html">4</a></li>
+<li class="number"><a href="./stock.html">5</a></li>
+<li class="number"><a href="./stock.html">6</a></li>
+<li class="number"><a href="./stock.html">7</a></li>
+<li class="number"><a href="./stock.html">8</a></li>
+<li class="number"><a href="./stock.html">9</a></li>
+<li><a href="./stock.html">次へ&gt;&gt;</a></li>
+</ul>
+
+</section>
+
+<div id="stock-write" class="from-write">
+<h3>株価予想に書き込みをする</h3>
+<div class="clearfix">
+<p>スパム対策の為、URLは"h"を抜いた"ttp"から入力してください。</p>
+<form action="">
+<dl class="clearfix">
+<dt><label for="form-stock-name">お名前</label></dt>
+<dd><input type="text" name="" id="form-stock-name" /></dd>
+<dt><label for="form-stock-code">銘柄コード</label></dt>
+<dd><input type="text" name="" id="form-stock-code" /></dd>
+</dl>
+<p><textarea name=""></textarea></p>
+<ul>
+<li><input type="checkbox" /><a href="./kiyaku.html">利用規約</a>に同意して書き込む</li>
+<li><input type="image" src="./img/button-form-write.png" value="書き込み" alt="書き込み" onMouseOver="this.src='./img/button-form-write-on.png'" onMouseOut="this.src='./img/button-form-write.png'" /></li>
+</ul>
+</form>
+</div>
+
+</article>
+<% if false %>
 <div>
   <%= image_tag "borads_top.jpg", width: "680px" %>
   <div id="board_lists">
@@ -25,3 +283,4 @@
     </div>
   </div>  
 </div>
+<% end %>
