--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,7 +1,7 @@
 <nav id="g-navi">
 	<ul class="clearfix">
 		<li class="g-navi-1"><a href="./index.html">注目銘柄</a></li>
-		<li class="g-navi-2"><%= link_to "仕手株速報", piece_index_path %></li>
+		<li class="g-navi-2"><%= link_to "仕手株速報", pieces_path %></li>
 		<li class="g-navi-3"><%= link_to "株価予測", boards_path %></li>
 		<li class="g-navi-4"><%= link_to "投資顧問会社口コミ", {controller: :boards, action: :index_consul, id: 1} %></li>
 		<li class="g-navi-5"><a href="./blog-rank-kabu.html">株ブログランキング</a></li>
