--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="ja" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -13,22 +12,14 @@
 	<meta property="og:type" content="" />
 	<meta property="og:image" content="" />
 	<meta property="fb:admins" content="100001675413043" />
-	<link rel="canonical" href="現在のURL" /> 
-	<meta http-equiv="content-script-type" content="text/javascript" />
-	<meta http-equiv="content-style-type" content="text/css" />
-	<link rel="stylesheet" type="text/css" media="all" href="./css/style.css" />
-	<link rel="stylesheet" type="text/css" media="all" href="./css/reset.css" />
-	<script type="text/javascript" src="./js/jquery.js"></script>
-	<script type="text/javascript" src="./js/jquery.input.text.js"></script>
-	<script type="text/javascript" src="./js/jquery.tab.js"></script>
 	<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
 	{lang: 'ja'}
 	</script>
 	<%= stylesheet_link_tag    "application", :media => "all" %>
-	<%= javascript_include_tag "application" %>
-	<%= csrf_meta_tags %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
 </head>
-<body id="help">
+<body id="stock-list">
 
 	<!--wrapper-->
 	<div id="wrapper" class="clearfix">
