--- a/app/views/beginners/index.html.erb
+++ b/app/views/beginners/index.html.erb
@@ -30,63 +30,55 @@
   <section id="beginner-1" class="beginner-list clearfix">
     <h2>株の基本的な仕組みを知る</h2>
     <ul>
-      <li><a href="./beginner.html">株とは</a></li>
-      <li><a href="./beginner.html">株はどこで売買されているのか</a></li>
-      <li><a href="./beginner.html">株で利益を得る仕組み</a></li>
-      <li><a href="./beginner.html">株式投資の魅力</a></li>
-      <li><a href="./beginner.html">株式投資を始める資金について</a></li>
-      <li><a href="./beginner.html">投資期間の考え方</a></li>
-      <li><a href="./beginner.html">株式投資の単元数の種類</a></li>
+      <% @b1.each do |b| %>
+        <li>
+          <%= link_to b.title, beginner_path(b) %>
+        </li>
+      <% end %>
     </ul>
   </section>
 
   <section id="beginner-2" class="beginner-list clearfix">
     <h2>証券会社で口座を開設する</h2>
     <ul>
-      <li><a href="./beginner.html">口座開設までの主な流れ</a></li>
-      <li><a href="./beginner.html">証券会社の選び方</a></li>
-      <li><a href="./beginner.html">手数料が安い証券会社</a></li>
-      <li><a href="./beginner.html">ディトレードができる証券会社</a></li>
-      <li><a href="./beginner.html">ミニ株が利用できる証券会社</a></li>
-      <li><a href="./beginner.html">夜間取引ができる証券会社</a></li>
-      <li><a href="./beginner.html">外国株が利用できる証券会社</a></li>
-      <li><a href="./beginner.html">特定口座で税務申告を楽にする方法</a></li>
+      <% @b2.each do |b| %>
+        <li>
+          <%= link_to b.title, beginner_path(b) %>
+        </li>
+      <% end %>
     </ul>
   </section>
 
   <section id="beginner-3" class="beginner-list clearfix">
     <h2>株式取引を始めてみよう</h2>
     <ul>
-      <li><a href="./beginner.html">初心者向けの銘柄のチェックポイン</a></li>
-      <li><a href="./beginner.html">初心者が買ってはいけない株とは</a></li>
-      <li><a href="./beginner.html">株を売るタイミング</a></li>
-      <li><a href="./beginner.html">様々な投資方法を知ろう</a></li>
-      <li><a href="./beginner.html">板の読み方を覚える</a></li>
+      <% @b3.each do |b| %>
+        <li>
+          <%= link_to b.title, beginner_path(b) %>
+        </li>
+      <% end %>
     </ul>
   </section>
 
   <section id="beginner-4" class="beginner-list clearfix">
     <h2>チャートの見方を覚えよう</h2>
     <ul>
-      <li><a href="./beginner.html">チャートの種類を覚えよう</a></li>
-      <li><a href="./beginner.html">ロウソク足の種類を覚えよう</a></li>
-      <li><a href="./beginner.html">ロウソク足の見方</a></li>
-      <li><a href="./beginner.html">相場の転換を示す十字線</a></li>
-      <li><a href="./beginner.html">ロウソク足で天井を知る</a></li>
-      <li><a href="./beginner.html">ロウソク足で底値を知る</a></li>
-      <li><a href="./beginner.html">上昇トレンドと下降トレンド</a></li>
-      <li><a href="./beginner.html">移動平均線から読み取るテクニカル分析</a></li>
+      <% @b4.each do |b| %>
+        <li>
+          <%= link_to b.title, beginner_path(b) %>
+        </li>
+      <% end %>
     </ul>
   </section>
 
   <section id="beginner-5" class="beginner-list clearfix">
     <h2>株式投資で知っておきたい情報</h2>
     <ul>
-      <li><a href="./beginner.html">株取引の指標を知る</a></li>
-      <li><a href="./beginner.html">市場の動向を探る指標</a></li>
-      <li><a href="./beginner.html">円高・円安から見る株式投資への影響</a></li>
-      <li><a href="./beginner.html">権利確定日と権利落ち日</a></li>
-      <li><a href="./beginner.html">値幅制限で株がどこまで動くかを知る</a></li>
+      <% @b5.each do |b| %>
+        <li>
+          <%= link_to b.title, beginner_path(b) %>
+        </li>
+      <% end %>
     </ul>
   </section>
 
