--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -15,6 +15,6 @@
 		<li class="g-navi-9">
 			<%= link_to "銘柄一覧", stocks_path %>
 		</li>
-		<%- if false %><li class="g-navi-10"><%= link_to "投資顧問一覧", page_consultant_path %></li><% end %>
+		<li class="g-navi-10"><%= link_to "投資顧問一覧", consultants_path %></li>
 	</ul>
 </nav>
