--- a/app/views/consultants/index.html.erb
+++ b/app/views/consultants/index.html.erb
@@ -31,201 +31,17 @@
                 <li><a href="#toushikomon-9">ら行</a></li>
                 <li><a href="#toushikomon-10">わ行</a></li>
             </ul>
-
-
-
-
-
-<% 10.times do |i| %>
-
-
-<% @consultants.each do |consultant| %>
-  <tr>
-    <td><%= consultant.title %></td>
-    <td><%= consultant.category %></td>
-    <td><%= consultant.contents %></td>
-    <td><%= consultant.site_name %></td>
-    <td><%= consultant.url %></td>
-    <td><%= consultant.place %></td>
-    <td><%= consultant.person %></td>
-    <td><%= consultant.phone %></td>
-    <td><%= consultant.kinsyo %></td>
-    <td><%= consultant.rate %></td>
-    <td><%= consultant.info %></td>
-    <td><%= consultant.regist %></td>
-    <td><%= link_to 'Show', consultant %></td>
-    <td><%= link_to 'Edit', edit_consultant_path(consultant) %></td>
-    <td><%= link_to 'Destroy', consultant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-
-
-
-
-
-
-            <section  id="toushikomon-1" class="toushikomon-list clearfix">
-                <h2>あ行の株用語</h2>
-                <ul>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                </ul>
-            </section>
-
-
-
-<% end %> 
-
-
-
-
-
-
-
-            <section  id="toushikomon-2" class="toushikomon-list clearfix">
-                <h2>か行の株用語</h2>
-                <ul>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                </ul>
-            </section>
-
-            <section  id="toushikomon-3" class="toushikomon-list clearfix">
-                <h2>さ行の株用語</h2>
-                <ul>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                </ul>
-            </section>
-
-            <section  id="toushikomon-4" class="toushikomon-list clearfix">
-                <h2>た行の株用語</h2>
-                <ul>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                </ul>
-            </section>
-
-            <section  id="toushikomon-5" class="toushikomon-list clearfix">
-                <h2>な行の株用語</h2>
-                <ul>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                </ul>
-            </section>
-
-            <section  id="toushikomon-6" class="toushikomon-list clearfix">
-                <h2>は行の株用語</h2>
-                <ul>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                </ul>
-            </section>
-
-            <section  id="toushikomon-7" class="toushikomon-list clearfix">
-                <h2>ま行の株用語</h2>
-                <ul>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                </ul>
-            </section>
-
-            <section  id="toushikomon-8" class="toushikomon-list clearfix">
-                <h2>や行の株用語</h2>
-                <ul>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                </ul>
-            </section>
-
-            <section  id="toushikomon-9" class="toushikomon-list clearfix">
-                <h2>ら行の株用語</h2>
-                <ul>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                </ul>
-            </section>
-
-            <section  id="toushikomon-10" class="toushikomon-list clearfix">
-                <h2>わ行の株用語</h2>
-                <ul>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                    <li><a href="toushikomon.html">アイリンク インベストメント</a></li>
-                </ul>
-            </section>
-
+            <% 10.times do |i| %>
+                <section  id="toushikomon-1" class="toushikomon-list clearfix">
+                    <h2>あ行の株用語</h2>
+                    <ul>
+                        <% Consultant.where(category: i).each do |consultant| %>
+                          <li><%= link_to consultant.name, consultant_path(consultant) %></li>
+                        <% end %>
+                    </ul>
+                </section>
+            <% end %> 
         </article>
-
 
 
 <%= link_to 'New Consultant', new_consultant_path %>
